Changelog
---------
The UFTP issue tracker is at
https://sourceforge.net/p/unicore/uftp-issues


UFTP 2.8.0 (released MMM dd 2020)
---------------------------------
 - new feature: session features can be limited 
   by authserver (e.g. to readonly access)

UFTP 2.7.1 (released Nov 4 2019)
--------------------------------
 - fix: files were not closed when receiving archive
   stream data, leading to a "too many open files" error

UFTP 2.7.0 (released Sept 25 2019)
----------------------------------
 - new feature: support direct unpacking of tar/zip streams
   (#53)
 - fix: keep data connections open in session mode

UFTP 2.6.2 (released Aug 27 2019)
---------------------------------
 - fix some packaging and documentation issues
 - update libs
 - remove support for the old (pre uftp 2.4.0) connection protocol

UFTP 2.6.1 (released Sep 14 2018)
---------------------------------
 - fix: backwards compatibility with old authentication
   protocol version

UFTP 2.6.0 (released Jul 11 2018)
---------------------------------
 - new feature: use CANL for SSL, i.e. greatly improved
   credential and truststore setup (#39)
 - new feature: allow to disable client-IP checking
 - allow to retrieve user info (incl. ssh public keys)
   via command port (#47)
 - update version of commons-codec and commons-io

UFTP 2.5.2 (released Jan 8 2018)
--------------------------------
 - fix: close parallel reader threads after each data
   transfer (#45)

UFTP 2.5.1 (released Nov 8 2017)
--------------------------------
 - systemd support
 - fix packaged version of 'uftp.sh' (#40)
 - client (uftp.sh): print proper error message to stderr (#41)
 - fix: append flag not honored for single-file upload (#42)
 - implement "APPE" (append) command (#44)
 
UFTP 2.5.0 (released June 12 2017)
----------------------------------
 - new feature: multiple allowed client IPs per transfer (#26)
 - new feature: tunneling / traffic forwarding via UFTPD (#36) 